#2366-Correção pr listagem de arquivos de otimização

--- a/Glass/Vue/ArquivosOtimizacao/Templates/LstArquivosOtimizacao.Filtro.html
+++ b/Glass/Vue/ArquivosOtimizacao/Templates/LstArquivosOtimizacao.Filtro.html
@@ -26,7 +26,7 @@
         </span>
         <span class="form-group">
             <label>Etiqueta</label>
-            <input type="text" v-model.number="filtroAtual.numEtiqueta" style="width: 60px" />
+            <input type="text" v-model="filtroAtual.numEtiqueta" style="width: 60px" />
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
