#2736 Início da correção do controle de endereço (cidade não está sendo alterada ao buscar pelo CEP)

--- a/Glass/Vue/_Compartilhado/Templates/Base/CampoComMascara.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/CampoComMascara.html
@@ -1,2 +1,2 @@
-﻿<masked-input ref="campo" v-bind:placeholder-char="'\u2000'" v-bind:value="valor || ''" v-bind:mask="mascara"
+﻿<masked-input ref="campo" type="text" v-bind:placeholder-char="'\u2000'" v-bind:value="valor || ''" v-bind:mask="mascara"
     v-on:input="atualizaValor"></masked-input>
