--- a/Glass/Vue/_Compartilhado/Templates/CampoEndereco.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoEndereco.html
@@ -33,7 +33,6 @@
         <label>
             Cidade
         </label>
-        <campo-busca-cidade v-bind:cidade.sync="enderecoAtual.cidade" v-bind:uf.sync="enderecoAtual.cidade.uf"
-            v-if="enderecoAtual.cidade"></campo-busca-cidade>
+        <campo-busca-cidade v-bind:cidade.sync="cidadeAtual" v-bind:uf.sync="ufAtual"></campo-busca-cidade>
     </span>
 </span>
