--- a/Glass/Vue/Cheques/LimitePorCpfCnpj/Templates/LstLimiteChequesCpfCnpj.Filtro.html
+++ b/Glass/Vue/Cheques/LimitePorCpfCnpj/Templates/LstLimiteChequesCpfCnpj.Filtro.html
@@ -1,12 +1,13 @@
 ﻿<section class="filtros">
     <div>
         <span>
-            <select v-model.boolean="buscaCpf" @change="limparFiltro">
-                <option :value="true">CPF</option>
-                <option :value="false">CNPJ</option>
-            </select>
-            <campo-cpf :cpf.sync="filtroAtual.cpfCnpj" v-if="buscaCpf"></campo-cpf>
-            <campo-cnpj :cnpj.sync="filtroAtual.cpfCnpj" v-if="!buscaCpf"></campo-cnpj>
+            <lista-selecao-tipos-pessoa :tipo-pessoa.sync="tipoPessoaAtual"></lista-selecao-tipos-pessoa>
+            <template v-if="tipoPessoaAtual.codigo == 'F'">
+                <campo-cpf :cpf.sync="filtroAtual.cpfCnpj"></campo-cpf>
+            </template>
+            <template v-if="tipoPessoaAtual.codigo == 'J'">
+                <campo-cnpj cnpj.sync="filtroAtual.cpfCnpj"></campo-cnpj>
+            </template>
             <button class="botaoPesquisar" @click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
