--- a/Glass/Vue/EncontrosContas/Templates/LstEncontrosContas.Filtro.html
+++ b/Glass/Vue/EncontrosContas/Templates/LstEncontrosContas.Filtro.html
@@ -14,7 +14,7 @@
         <span class="form-group">
             <label>Fornecedor</label>
             <input type="number" v-model.number="filtroAtual.idFornecedor" style="width: 60px"/>
-            <input type="text" v-model="filtroAtual.idFornecedor" style="width: 200px"/>
+            <input type="text" v-model="filtroAtual.nomeFornecedor" style="width: 200px"/>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
