--- a/Glass/Vue/EncontrosContas/Templates/LstEncontrosContas.Filtro.html
+++ b/Glass/Vue/EncontrosContas/Templates/LstEncontrosContas.Filtro.html
@@ -2,7 +2,7 @@
     <div>
         <span class="form-group">
             <label>Cód</label>
-            <input type="text" v-model="filtroAtual.id" style="width: 60px"/>
+            <input type="number" v-model="filtroAtual.id" style="width: 60px"/>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
         <span class="form-group">
